Start of preprocessing

--- a/Report/01-Introduction.ipynb
+++ b/Report/01-Introduction.ipynb
@@ -393,6 +393,16 @@
    "id": "855b2281",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df[1,'Description']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "338a30e9",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
