--- a/Bill_Evidence/billsfirstlook.ipynb
+++ b/Bill_Evidence/billsfirstlook.ipynb
@@ -217,52 +217,52 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>227376</th>\n",
-       "      <td>CVE-2022-24125</td>\n",
+       "      <th>227547</th>\n",
+       "      <td>CVE-2022-24276</td>\n",
        "      <td>Candidate</td>\n",
        "      <td>** RESERVED ** This candidate has been reserve...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Assigned (20220129)</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227377</th>\n",
-       "      <td>CVE-2022-24126</td>\n",
+       "      <th>227548</th>\n",
+       "      <td>CVE-2022-24277</td>\n",
        "      <td>Candidate</td>\n",
        "      <td>** RESERVED ** This candidate has been reserve...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Assigned (20220129)</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227378</th>\n",
-       "      <td>CVE-2022-24127</td>\n",
+       "      <th>227549</th>\n",
+       "      <td>CVE-2022-24280</td>\n",
        "      <td>Candidate</td>\n",
        "      <td>** RESERVED ** This candidate has been reserve...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Assigned (20220129)</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227379</th>\n",
-       "      <td>CVE-2022-24128</td>\n",
+       "      <th>227550</th>\n",
+       "      <td>CVE-2022-24281</td>\n",
        "      <td>Candidate</td>\n",
        "      <td>** RESERVED ** This candidate has been reserve...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Assigned (20220129)</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227380</th>\n",
-       "      <td>CVE-2022-24129</td>\n",
+       "      <th>227551</th>\n",
+       "      <td>CVE-2022-24282</td>\n",
        "      <td>Candidate</td>\n",
        "      <td>** RESERVED ** This candidate has been reserve...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Assigned (20220130)</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -272,25 +272,25 @@
       ],
       "text/plain": [
        "                  Name     Status  \\\n",
-       "227376  CVE-2022-24125  Candidate   \n",
-       "227377  CVE-2022-24126  Candidate   \n",
-       "227378  CVE-2022-24127  Candidate   \n",
-       "227379  CVE-2022-24128  Candidate   \n",
-       "227380  CVE-2022-24129  Candidate   \n",
+       "227547  CVE-2022-24276  Candidate   \n",
+       "227548  CVE-2022-24277  Candidate   \n",
+       "227549  CVE-2022-24280  Candidate   \n",
+       "227550  CVE-2022-24281  Candidate   \n",
+       "227551  CVE-2022-24282  Candidate   \n",
        "\n",
        "                                              Description References  \\\n",
-       "227376  ** RESERVED ** This candidate has been reserve...        NaN   \n",
-       "227377  ** RESERVED ** This candidate has been reserve...        NaN   \n",
-       "227378  ** RESERVED ** This candidate has been reserve...        NaN   \n",
-       "227379  ** RESERVED ** This candidate has been reserve...        NaN   \n",
-       "227380  ** RESERVED ** This candidate has been reserve...        NaN   \n",
+       "227547  ** RESERVED ** This candidate has been reserve...        NaN   \n",
+       "227548  ** RESERVED ** This candidate has been reserve...        NaN   \n",
+       "227549  ** RESERVED ** This candidate has been reserve...        NaN   \n",
+       "227550  ** RESERVED ** This candidate has been reserve...        NaN   \n",
+       "227551  ** RESERVED ** This candidate has been reserve...        NaN   \n",
        "\n",
        "                      Phase                              Votes Comments  \n",
-       "227376  Assigned (20220129)  None (candidate not yet proposed)      NaN  \n",
-       "227377  Assigned (20220129)  None (candidate not yet proposed)      NaN  \n",
-       "227378  Assigned (20220129)  None (candidate not yet proposed)      NaN  \n",
-       "227379  Assigned (20220129)  None (candidate not yet proposed)      NaN  \n",
-       "227380  Assigned (20220130)  None (candidate not yet proposed)      NaN  "
+       "227547  Assigned (20220131)  None (candidate not yet proposed)      NaN  \n",
+       "227548  Assigned (20220131)  None (candidate not yet proposed)      NaN  \n",
+       "227549  Assigned (20220131)  None (candidate not yet proposed)      NaN  \n",
+       "227550  Assigned (20220131)  None (candidate not yet proposed)      NaN  \n",
+       "227551  Assigned (20220131)  None (candidate not yet proposed)      NaN  "
       ]
      },
      "execution_count": 4,
@@ -356,52 +356,52 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>167889</th>\n",
-       "      <td>CVE-2022-24032</td>\n",
+       "      <th>167917</th>\n",
+       "      <td>CVE-2022-24130</td>\n",
        "      <td>Candidate</td>\n",
-       "      <td>Adenza AxiomSL ControllerView through 10.8.1 i...</td>\n",
-       "      <td>MISC:https://github.com/jdordonezn/CVE-2022-24...</td>\n",
-       "      <td>Assigned (20220126)</td>\n",
+       "      <td>xterm through Patch 370, when Sixel support is...</td>\n",
+       "      <td>MISC:https://invisible-island.net/xterm/xterm....</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167890</th>\n",
-       "      <td>CVE-2022-24071</td>\n",
+       "      <th>167918</th>\n",
+       "      <td>CVE-2022-24263</td>\n",
        "      <td>Candidate</td>\n",
-       "      <td>A Built-in extension in Whale browser before 3...</td>\n",
-       "      <td>CONFIRM:https://cve.naver.com/detail/cve-2022-...</td>\n",
-       "      <td>Assigned (20220127)</td>\n",
+       "      <td>Hospital Management System v4.0 was discovered...</td>\n",
+       "      <td>MISC:https://github.com/kishan0725/Hospital-Ma...</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167891</th>\n",
-       "      <td>CVE-2022-24122</td>\n",
+       "      <th>167919</th>\n",
+       "      <td>CVE-2022-24264</td>\n",
        "      <td>Candidate</td>\n",
-       "      <td>kernel/ucount.c in the Linux kernel 5.14 throu...</td>\n",
-       "      <td>MISC:https://git.kernel.org/cgit/linux/kernel/...</td>\n",
-       "      <td>Assigned (20220129)</td>\n",
+       "      <td>Cuppa CMS v1.0 was discovered to contain a SQL...</td>\n",
+       "      <td>MISC:https://github.com/CuppaCMS/CuppaCMS/issu...</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167892</th>\n",
-       "      <td>CVE-2022-24123</td>\n",
+       "      <th>167920</th>\n",
+       "      <td>CVE-2022-24265</td>\n",
        "      <td>Candidate</td>\n",
-       "      <td>MarkText through 0.16.3 does not sanitize the ...</td>\n",
-       "      <td>MISC:https://github.com/marktext/marktext/issu...</td>\n",
-       "      <td>Assigned (20220129)</td>\n",
+       "      <td>Cuppa CMS v1.0 was discovered to contain a SQL...</td>\n",
+       "      <td>MISC:https://github.com/CuppaCMS/CuppaCMS/issu...</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167893</th>\n",
-       "      <td>CVE-2022-24124</td>\n",
+       "      <th>167921</th>\n",
+       "      <td>CVE-2022-24266</td>\n",
        "      <td>Candidate</td>\n",
-       "      <td>The query API in Casdoor before 1.13.1 has a S...</td>\n",
-       "      <td>MISC:https://github.com/casdoor/casdoor/compar...</td>\n",
-       "      <td>Assigned (20220129)</td>\n",
+       "      <td>Cuppa CMS v1.0 was discovered to contain a SQL...</td>\n",
+       "      <td>MISC:https://github.com/CuppaCMS/CuppaCMS/issu...</td>\n",
+       "      <td>Assigned (20220131)</td>\n",
        "      <td>None (candidate not yet proposed)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -411,32 +411,32 @@
       ],
       "text/plain": [
        "                  Name     Status  \\\n",
-       "167889  CVE-2022-24032  Candidate   \n",
-       "167890  CVE-2022-24071  Candidate   \n",
-       "167891  CVE-2022-24122  Candidate   \n",
-       "167892  CVE-2022-24123  Candidate   \n",
-       "167893  CVE-2022-24124  Candidate   \n",
+       "167917  CVE-2022-24130  Candidate   \n",
+       "167918  CVE-2022-24263  Candidate   \n",
+       "167919  CVE-2022-24264  Candidate   \n",
+       "167920  CVE-2022-24265  Candidate   \n",
+       "167921  CVE-2022-24266  Candidate   \n",
        "\n",
        "                                              Description  \\\n",
-       "167889  Adenza AxiomSL ControllerView through 10.8.1 i...   \n",
-       "167890  A Built-in extension in Whale browser before 3...   \n",
-       "167891  kernel/ucount.c in the Linux kernel 5.14 throu...   \n",
-       "167892  MarkText through 0.16.3 does not sanitize the ...   \n",
-       "167893  The query API in Casdoor before 1.13.1 has a S...   \n",
+       "167917  xterm through Patch 370, when Sixel support is...   \n",
+       "167918  Hospital Management System v4.0 was discovered...   \n",
+       "167919  Cuppa CMS v1.0 was discovered to contain a SQL...   \n",
+       "167920  Cuppa CMS v1.0 was discovered to contain a SQL...   \n",
+       "167921  Cuppa CMS v1.0 was discovered to contain a SQL...   \n",
        "\n",
        "                                               References  \\\n",
-       "167889  MISC:https://github.com/jdordonezn/CVE-2022-24...   \n",
-       "167890  CONFIRM:https://cve.naver.com/detail/cve-2022-...   \n",
-       "167891  MISC:https://git.kernel.org/cgit/linux/kernel/...   \n",
-       "167892  MISC:https://github.com/marktext/marktext/issu...   \n",
-       "167893  MISC:https://github.com/casdoor/casdoor/compar...   \n",
+       "167917  MISC:https://invisible-island.net/xterm/xterm....   \n",
+       "167918  MISC:https://github.com/kishan0725/Hospital-Ma...   \n",
+       "167919  MISC:https://github.com/CuppaCMS/CuppaCMS/issu...   \n",
+       "167920  MISC:https://github.com/CuppaCMS/CuppaCMS/issu...   \n",
+       "167921  MISC:https://github.com/CuppaCMS/CuppaCMS/issu...   \n",
        "\n",
        "                      Phase                              Votes Comments  \n",
-       "167889  Assigned (20220126)  None (candidate not yet proposed)      NaN  \n",
-       "167890  Assigned (20220127)  None (candidate not yet proposed)      NaN  \n",
-       "167891  Assigned (20220129)  None (candidate not yet proposed)      NaN  \n",
-       "167892  Assigned (20220129)  None (candidate not yet proposed)      NaN  \n",
-       "167893  Assigned (20220129)  None (candidate not yet proposed)      NaN  "
+       "167917  Assigned (20220131)  None (candidate not yet proposed)      NaN  \n",
+       "167918  Assigned (20220131)  None (candidate not yet proposed)      NaN  \n",
+       "167919  Assigned (20220131)  None (candidate not yet proposed)      NaN  \n",
+       "167920  Assigned (20220131)  None (candidate not yet proposed)      NaN  \n",
+       "167921  Assigned (20220131)  None (candidate not yet proposed)      NaN  "
       ]
      },
      "execution_count": 6,
@@ -501,9 +501,9 @@
       "Requirement already satisfied: regex>=2021.8.3 in /Users/willnunn/opt/anaconda3/lib/python3.8/site-packages (from nltk) (2021.11.2)\n",
       "Requirement already satisfied: tqdm in /Users/willnunn/opt/anaconda3/lib/python3.8/site-packages (from nltk) (4.62.3)\n",
       "Requirement already satisfied: gensim in /Users/willnunn/opt/anaconda3/lib/python3.8/site-packages (4.1.2)\n",
+      "Requirement already satisfied: smart-open>=1.8.1 in /Users/willnunn/opt/anaconda3/lib/python3.8/site-packages (from gensim) (5.2.1)\n",
       "Requirement already satisfied: scipy>=0.18.1 in /Users/willnunn/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.7.3)\n",
-      "Requirement already satisfied: numpy>=1.17.0 in /Users/willnunn/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.21.2)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in /Users/willnunn/opt/anaconda3/lib/python3.8/site-packages (from gensim) (5.2.1)\n"
+      "Requirement already satisfied: numpy>=1.17.0 in /Users/willnunn/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.21.2)\n"
      ]
     }
    ],
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "'ipinputc bsdderived tcpip implementations allows remote attackers cause denial service crash hang crafted packets'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I didn't quite get to lemmitising today. There are probably packages in gensim just for this- we should have a read before diving straight in (the mistake I made today). Cheers, Bill"
+    "I didn't quite get to lemmatising today. There are probably packages in gensim just for this- we should have a read before diving straight in (the mistake I made today). Cheers, Bill"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start the lemmatising."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nltk.download('wordnet')\n",
+    "# nltk.download('averaged_perceptron_tagger')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi => hi\n",
+      "my => my\n",
+      "name => name\n",
+      "is => be\n",
+      "bill => bill\n",
+      ", => ,\n",
+      "you => you\n",
+      "'ll => 'll\n",
+      "like => like\n",
+      "to => to\n",
+      "eat => eat\n",
+      "10 => 10\n",
+      "beans => bean\n",
+      ". => .\n",
+      "it => it\n",
+      "'s => 's\n",
+      "cold => cold\n",
+      "( => (\n",
+      "2deg => 2deg\n",
+      ") => )\n",
+      "outside => outside\n",
+      ". => .\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import wordnet as wn\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "from nltk import word_tokenize, pos_tag\n",
+    "from collections import defaultdict\n",
+    "tag_map = defaultdict(lambda : wn.NOUN)\n",
+    "tag_map['J'] = wn.ADJ\n",
+    "tag_map['V'] = wn.VERB\n",
+    "tag_map['R'] = wn.ADV\n",
+    "\n",
+    "text = test_string\n",
+    "tokens = word_tokenize(text)\n",
+    "lemma_function = WordNetLemmatizer()\n",
+    "\n",
+    "for token, tag in pos_tag(tokens):\n",
+    "    lemma = lemma_function.lemmatize(token, tag_map[tag[0]])\n",
+    "    print(token, \"=>\", lemma)"
    ]
   }
  ],
