--- a/Report/01-Introduction.ipynb
+++ b/Report/01-Introduction.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "The brief was to:\n",
     "\n",
-    "* \n",
+    "* Choose an question to evaluate\n",
+    "* Learn the parameters of the models\n",
+    "* Learn the performance of the models\n",
+    "* Use the results of the models to evaluate the question\n",
     "\n",
-    "We first \n",
-    "\n",
-    "## The team\n",
-    "The team consisted of \n",
+    "We first chose the data that we would work with, as finding a dataset that was suitable was going to be the main problem. For this we will use a CVE database, which is a collection of all reported common vulnerability and exploits with a short description about what each is about. We will look into how the nature of the CVEs have changed over time by analysing the descriptions. The Models we will use are LDA and ... . As both of these are unsupervised it is hard to analyse their performance, however we can look at how they have grouped the terms and evaluate them. We will also compare the two models to see how their results differ. \n",
     "\n",
     "## Library requirements\n"
    ]
@@ -108,7 +108,7 @@
     "\n",
     "* /data\n",
     "  * /data/raw\n",
-    "      * \n",
+    "      * allitems.csv\n",
     "  * /data/processed\n",
     "      * \n",
     "\n",
