Included Bill's work into report

--- a/Report/02-Pre-Processing.ipynb
+++ b/Report/02-Pre-Processing.ipynb
@@ -10,121 +10,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2b13b23e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting nltk\n",
-      "  Downloading nltk-3.6.7-py3-none-any.whl (1.5 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.5 MB 2.3 MB/s eta 0:00:01     |████████████▊                   | 593 kB 2.3 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: joblib in /home/c/.local/lib/python3.8/site-packages (from nltk) (1.1.0)\n",
-      "Collecting tqdm\n",
-      "  Downloading tqdm-4.62.3-py2.py3-none-any.whl (76 kB)\n",
-      "\u001b[K     |████████████████████████████████| 76 kB 136 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: click in /usr/lib/python3/dist-packages (from nltk) (7.0)\n",
-      "Collecting regex>=2021.8.3\n",
-      "  Downloading regex-2022.1.18-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (764 kB)\n",
-      "\u001b[K     |████████████████████████████████| 764 kB 184 kB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: tqdm, regex, nltk\n",
-      "Successfully installed nltk-3.6.7 regex-2022.1.18 tqdm-4.62.3\n",
-      "Collecting gensim\n",
-      "  Downloading gensim-4.1.2-cp38-cp38-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (24.1 MB)\n",
-      "\u001b[K     |████████████████████████████████| 24.1 MB 28 kB/s  eta 0:00:01    |██████▋                         | 5.0 MB 2.5 MB/s eta 0:00:08     |██████████████                  | 10.5 MB 1.4 MB/s eta 0:00:10     |█████████████████████▎          | 16.0 MB 2.0 MB/s eta 0:00:05\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.17.0 in /home/c/.local/lib/python3.8/site-packages (from gensim) (1.21.4)\n",
-      "Requirement already satisfied: scipy>=0.18.1 in /home/c/.local/lib/python3.8/site-packages (from gensim) (1.7.1)\n",
-      "Collecting smart-open>=1.8.1\n",
-      "  Downloading smart_open-5.2.1-py3-none-any.whl (58 kB)\n",
-      "\u001b[K     |████████████████████████████████| 58 kB 816 kB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: smart-open, gensim\n",
-      "Successfully installed gensim-4.1.2 smart-open-5.2.1\n",
-      "Collecting pyLDAvis\n",
-      "  Downloading pyLDAvis-3.3.1.tar.gz (1.7 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.7 MB 1.1 MB/s eta 0:00:01\n",
-      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: scikit-learn in /home/c/.local/lib/python3.8/site-packages (from pyLDAvis) (1.0.1)\n",
-      "Requirement already satisfied: scipy in /home/c/.local/lib/python3.8/site-packages (from pyLDAvis) (1.7.1)\n",
-      "Collecting funcy\n",
-      "  Downloading funcy-1.17-py2.py3-none-any.whl (33 kB)\n",
-      "Requirement already satisfied: sklearn in /home/c/.local/lib/python3.8/site-packages (from pyLDAvis) (0.0)\n",
-      "Requirement already satisfied: pandas>=1.2.0 in /home/c/.local/lib/python3.8/site-packages (from pyLDAvis) (1.3.4)\n",
-      "Requirement already satisfied: joblib in /home/c/.local/lib/python3.8/site-packages (from pyLDAvis) (1.1.0)\n",
-      "Requirement already satisfied: numpy>=1.20.0 in /home/c/.local/lib/python3.8/site-packages (from pyLDAvis) (1.21.4)\n",
-      "Requirement already satisfied: gensim in /home/c/.local/lib/python3.8/site-packages (from pyLDAvis) (4.1.2)\n",
-      "Collecting future\n",
-      "  Downloading future-0.18.2.tar.gz (829 kB)\n",
-      "\u001b[K     |████████████████████████████████| 829 kB 993 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: setuptools in /usr/lib/python3/dist-packages (from pyLDAvis) (45.2.0)\n",
-      "Collecting numexpr\n",
-      "  Downloading numexpr-2.8.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (381 kB)\n",
-      "\u001b[K     |████████████████████████████████| 381 kB 1.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: jinja2 in /usr/local/lib/python3.8/dist-packages (from pyLDAvis) (3.0.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/c/.local/lib/python3.8/site-packages (from scikit-learn->pyLDAvis) (3.0.0)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /usr/lib/python3/dist-packages (from pandas>=1.2.0->pyLDAvis) (2019.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/lib/python3/dist-packages (from pandas>=1.2.0->pyLDAvis) (2.7.3)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in /home/c/.local/lib/python3.8/site-packages (from gensim->pyLDAvis) (5.2.1)\n",
-      "Requirement already satisfied: packaging in /usr/local/lib/python3.8/dist-packages (from numexpr->pyLDAvis) (21.2)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.8/dist-packages (from jinja2->pyLDAvis) (2.0.1)\n",
-      "Requirement already satisfied: pyparsing<3,>=2.0.2 in /usr/local/lib/python3.8/dist-packages (from packaging->numexpr->pyLDAvis) (2.4.7)\n",
-      "Building wheels for collected packages: pyLDAvis, future\n",
-      "  Building wheel for pyLDAvis (PEP 517) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pyLDAvis: filename=pyLDAvis-3.3.1-py2.py3-none-any.whl size=136898 sha256=9e00930e2b886cc4abcd278c41f7083d364503d6ec8693bad28528648cbeb991\n",
-      "  Stored in directory: /home/c/.cache/pip/wheels/90/61/ec/9dbe9efc3acf9c4e37ba70fbbcc3f3a0ebd121060aa593181a\n",
-      "  Building wheel for future (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for future: filename=future-0.18.2-py3-none-any.whl size=491058 sha256=074b882ac598b369820956d3ae0773050512aa4dd22f19663b20c72c2d2fd12a\n",
-      "  Stored in directory: /home/c/.cache/pip/wheels/8e/70/28/3d6ccd6e315f65f245da085482a2e1c7d14b90b30f239e2cf4\n",
-      "Successfully built pyLDAvis future\n",
-      "Installing collected packages: funcy, future, numexpr, pyLDAvis\n",
-      "Successfully installed funcy-1.17 future-0.18.2 numexpr-2.8.1 pyLDAvis-3.3.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip3 install nltk\n",
-    "!pip3 install gensim\n",
-    "!pip3 install pyLDAvis"
+    "#!pip3 install nltk\n",
+    "#!pip3 install gensim\n",
+    "#!pip3 install pyLDAvis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "60497e95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
     "import pandas as pd\n",
     "import requests\n",
     "import gensim\n",
+    "import string\n",
+    "import nltk\n",
     "from gensim.utils import simple_preprocess\n",
     "from gensim.parsing.preprocessing import STOPWORDS\n",
+    "from nltk.corpus import wordnet as wn\n",
+    "from nltk import word_tokenize, pos_tag\n",
+    "from collections import defaultdict\n",
     "from nltk.stem import WordNetLemmatizer, SnowballStemmer\n",
     "from nltk.stem.porter import *\n",
-    "import numpy as np\n",
-    "np.random.seed(2018)\n",
-    "\n",
-    "import nltk"
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e61a4698",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nltk.download('popular')"
+    "#nltk.download('popular')\n",
+    "#nltk.download('stopwords')\n",
+    "#nltk.download('punkt')\n",
+    "#nltk.download('wordnet')\n",
+    "#nltk.download('averaged_perceptron_tagger')\n",
+    "#nltk.download('omw-1.4')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "7d5fc648",
    "metadata": {},
    "outputs": [
@@ -364,7 +300,7 @@
        "[227238 rows x 7 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,53 +313,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "354101aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df[~df.Description.str.startswith('**')]\n",
-    "desc = df['Description']"
+    "desc = df['Description'].str.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "7923350a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1     Buffer overflow in NFS mountd gives root acces...\n",
-       "2     Execute commands as root via buffer overflow i...\n",
-       "3     MIME buffer overflow in email clients, e.g. So...\n",
-       "4     Arbitrary command execution via IMAP buffer ov...\n",
-       "5     Buffer overflow in POP servers based on BSD/Qu...\n",
-       "6     Information from SSL-encrypted sessions via PK...\n",
-       "7     Buffer overflow in NIS+, in Sun's rpc.nisd pro...\n",
-       "8     Inverse query buffer overflow in BIND 4.9 and ...\n",
-       "9     Denial of Service vulnerability in BIND 8 Rele...\n",
-       "10    Denial of Service vulnerabilities in BIND 4.9 ...\n",
-       "11    Some web servers under Microsoft Windows allow...\n",
-       "12    Stolen credentials from SSH clients via ssh-ag...\n",
-       "13    Unauthorized privileged access or denial of se...\n",
-       "14                       Teardrop IP denial of service.\n",
-       "15                           Land IP denial of service.\n",
-       "16    FTP servers can allow an attacker to connect t...\n",
-       "17     Buffer overflow in statd allows root privileges.\n",
-       "18    Delete or create a file via rpc.statd, due to ...\n",
-       "20    Arbitrary command execution via buffer overflo...\n",
+       "0    ip_input.c in bsd-derived tcp/ip implementatio...\n",
+       "1    buffer overflow in nfs mountd gives root acces...\n",
+       "2    execute commands as root via buffer overflow i...\n",
+       "3    mime buffer overflow in email clients, e.g. so...\n",
+       "4    arbitrary command execution via imap buffer ov...\n",
+       "5    buffer overflow in pop servers based on bsd/qu...\n",
+       "6    information from ssl-encrypted sessions via pk...\n",
+       "7    buffer overflow in nis+, in sun's rpc.nisd pro...\n",
+       "8    inverse query buffer overflow in bind 4.9 and ...\n",
+       "9    denial of service vulnerability in bind 8 rele...\n",
        "Name: Description, dtype: object"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "desc[1:20]"
+    "desc[0:10]"
    ]
   },
   {
@@ -436,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "cb94e799",
    "metadata": {
     "scrolled": true
@@ -452,27 +379,253 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab0336a6",
+   "id": "13217aec",
    "metadata": {},
    "source": [
-    "Remove Punctuation"
+    "Remove stop words, punctuation and lemmitize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "040e303f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = stopwords.words('english')\n",
+    "\n",
+    "def remove_stop_words(text):\n",
+    "    words = text.split(' ')\n",
+    "    text1 = \" \".join([i for i in words if i not in stop_words])\n",
+    "    return text1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3cb02d1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_entry(text): \n",
+    "    delete_dict = {sp_character: '' for sp_character in string.punctuation + string.digits}\n",
+    "    delete_dict[' '] = ' ' \n",
+    "    table = str.maketrans(delete_dict)\n",
+    "    text1 = text.translate(table)\n",
+    "\n",
+    "    return text1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "62acbe82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hi', 'my', 'name', 'is', 'bill', ',', 'you', \"'ll\", 'like', 'to', 'eat', '10', 'beans', '.', 'it', \"'s\", 'cold', '(', '2deg', ')', 'outside', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_string = \"hi my name is bill, you'll like to eat 10 beans. it's cold ( 2deg ) outside.\"\n",
+    "test_tokens = word_tokenize(test_string)\n",
+    "print(test_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b731d962",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hi', 'name', 'bill', 'youll', 'like', 'eat', 'beans', 'cold', 'deg', 'outside']\n",
+      "['hi', 'name', 'bill', 'like', 'eat', 'beans', 'cold', 'deg', 'outside']\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_string1 = remove_stop_words(clean_entry(test_string))\n",
+    "print(word_tokenize(test_string1))\n",
+    "test_string2 = clean_entry(remove_stop_words(test_string))\n",
+    "print(word_tokenize(test_string2))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63c4a0a9",
+   "id": "ef0ed0a5",
    "metadata": {},
    "source": [
-    "Lemmitisation"
+    "We see here the correct order to apply our functions is removal of stopwords and then cleaning. This is because words like `\"you'll\"` are in our stopword list but `\"youll\"` is not, and thus removing punctuation in the cleaning step messes us up if we do it before removing the stopwords. \n",
+    "We may now apply our functions to `desc` to clean it up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9702c13d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desc1 = desc.apply(remove_stop_words)\n",
+    "desc1 = desc1.apply(clean_entry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5358feec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ip_input.c in bsd-derived tcp/ip implementations allows remote attackers to cause a denial of service (crash or hang) via crafted packets.\n",
+      "ipinputc bsdderived tcpip implementations allows remote attackers cause denial service crash hang via crafted packets\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(desc[0])\n",
+    "print(desc1[0])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "90955edf",
+   "id": "687d329e",
    "metadata": {},
    "source": [
-    "Remove Stop words"
+    "I found out after doing the above that `gensim` has a list of stopwords which is much more comprehensive than the list in `nltk`. The code below is therefore almost a complete repeat of our `remove_stop_words` function. We will use both functions to ensure that we cover the largest range of stop words."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "03bceb76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_stop_words = gensim.parsing.preprocessing.STOPWORDS\n",
+    "\n",
+    "def remove_all_stop_words(text):\n",
+    "    words = text.split(' ')\n",
+    "    text1 = \" \".join([i for i in words if i not in all_stop_words])\n",
+    "    return text1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8976871",
+   "metadata": {},
+   "source": [
+    "We can therefore generate produce a sparser representation (I call it `desc2`) of our descriptions than `desc1` if we want to. We see that it gets rid of stuff like `\"via\"`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1b44cdb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ipinputc bsdderived tcpip implementations allows remote attackers cause denial service crash hang crafted packets'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desc2 = desc1.apply(remove_all_stop_words)\n",
+    "desc2[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae30e9b4",
+   "metadata": {},
+   "source": [
+    "Let's start the lemmatising."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a8558d8f",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi => hi\n",
+      "my => my\n",
+      "name => name\n",
+      "is => be\n",
+      "bill => bill\n",
+      ", => ,\n",
+      "you => you\n",
+      "'ll => 'll\n",
+      "like => like\n",
+      "to => to\n",
+      "eat => eat\n",
+      "10 => 10\n",
+      "beans => bean\n",
+      ". => .\n",
+      "it => it\n",
+      "'s => 's\n",
+      "cold => cold\n",
+      "( => (\n",
+      "2deg => 2deg\n",
+      ") => )\n",
+      "outside => outside\n",
+      ". => .\n"
+     ]
+    }
+   ],
+   "source": [
+    "tag_map = defaultdict(lambda : wn.NOUN)\n",
+    "tag_map['J'] = wn.ADJ\n",
+    "tag_map['V'] = wn.VERB\n",
+    "tag_map['R'] = wn.ADV\n",
+    "\n",
+    "text = test_string\n",
+    "tokens = word_tokenize(text)\n",
+    "lemma_function = WordNetLemmatizer()\n",
+    "\n",
+    "for token, tag in pos_tag(tokens):\n",
+    "    lemma = lemma_function.lemmatize(token, tag_map[tag[0]])\n",
+    "    print(token, \"=>\", lemma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90e71cb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6d757fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
