--- a/Report/02-Pre-Processing.ipynb
+++ b/Report/02-Pre-Processing.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13217aec",
+   "id": "adafcc7d",
    "metadata": {},
    "source": [
     "Remove stop words, punctuation and lemmitize"
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "040e303f",
+   "id": "92d0173d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3cb02d1c",
+   "id": "a8e50f0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "62acbe82",
+   "id": "6dc0fbf6",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b731d962",
+   "id": "ed0568e8",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef0ed0a5",
+   "id": "ff061b85",
    "metadata": {},
    "source": [
     "We see here the correct order to apply our functions is removal of stopwords and then cleaning. This is because words like `\"you'll\"` are in our stopword list but `\"youll\"` is not, and thus removing punctuation in the cleaning step messes us up if we do it before removing the stopwords. \n",
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9702c13d",
+   "id": "df7affc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5358feec",
+   "id": "f3450590",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "687d329e",
+   "id": "d63655bc",
    "metadata": {},
    "source": [
     "I found out after doing the above that `gensim` has a list of stopwords which is much more comprehensive than the list in `nltk`. The code below is therefore almost a complete repeat of our `remove_stop_words` function. We will use both functions to ensure that we cover the largest range of stop words."
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "03bceb76",
+   "id": "4dc5a508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8976871",
+   "id": "456f5f8a",
    "metadata": {},
    "source": [
     "We can therefore generate produce a sparser representation (I call it `desc2`) of our descriptions than `desc1` if we want to. We see that it gets rid of stuff like `\"via\"`."
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1b44cdb5",
+   "id": "f05494d0",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae30e9b4",
+   "id": "6fd16c28",
    "metadata": {},
    "source": [
     "Let's start the lemmatising."
@@ -561,68 +561,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a8558d8f",
+   "execution_count": 29,
+   "id": "b38ea0f3",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi => hi\n",
-      "my => my\n",
-      "name => name\n",
-      "is => be\n",
-      "bill => bill\n",
-      ", => ,\n",
-      "you => you\n",
-      "'ll => 'll\n",
-      "like => like\n",
-      "to => to\n",
-      "eat => eat\n",
-      "10 => 10\n",
-      "beans => bean\n",
-      ". => .\n",
-      "it => it\n",
-      "'s => 's\n",
-      "cold => cold\n",
-      "( => (\n",
-      "2deg => 2deg\n",
-      ") => )\n",
-      "outside => outside\n",
-      ". => .\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tag_map = defaultdict(lambda : wn.NOUN)\n",
     "tag_map['J'] = wn.ADJ\n",
     "tag_map['V'] = wn.VERB\n",
     "tag_map['R'] = wn.ADV\n",
     "\n",
-    "text = test_string\n",
-    "tokens = word_tokenize(text)\n",
-    "lemma_function = WordNetLemmatizer()\n",
-    "\n",
-    "for token, tag in pos_tag(tokens):\n",
-    "    lemma = lemma_function.lemmatize(token, tag_map[tag[0]])\n",
-    "    print(token, \"=>\", lemma)"
+    "desc3 = []\n",
+    "for line in desc2:\n",
+    "    tokens = word_tokenize(line)\n",
+    "    lemma_function = WordNetLemmatizer()\n",
+    "    desc3.append([lemma_function.lemmatize(token, tag_map[tag[0]]) for token, tag in pos_tag(tokens)]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "4444acdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/c/.local/lib/python3.8/site-packages/numpy/lib/npyio.py:528: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  arr = np.asanyarray(arr)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.save('../data/processed/formatted1',desc3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f0a8e61f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desc4 = np.load('../data/processed/formatted1.npy',allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e71cb9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6d757fc",
+   "id": "c3d27c14",
    "metadata": {},
    "outputs": [],
    "source": []
