--- a/Bill_Evidence/billslda.ipynb
+++ b/Bill_Evidence/billslda.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We retrieve the preprocessed data Adam pickled."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
+    "We retrieve the data Adam pickled after preprocessing."
    ]
   },
   {
@@ -22,8 +13,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "desc4 = np.load('../data/processed/formatted1.npy',allow_pickle=True)"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desc4 = np.load('/Users/willnunn/Desktop/DST/Assessment-3-Bill-Adam/data/processed/formatted1.npy', allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(desc4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By chance I took a look at the `formatted1.npy` file and some entries looked only a few words long. I'm therefore going to check the lengths."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lengths = []\n",
+    "\n",
+    "for d in desc4:\n",
+    "    lengths.append(len(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(lengths, bins = 50, range=(0,100))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This looks much better than I'd anticipated, I think we're ok to continue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
